--- a/backend/FastAPI/FastAPI.ipynb
+++ b/backend/FastAPI/FastAPI.ipynb
@@ -43,6 +43,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "96b09259-ae58-42b2-80f3-84e0d11376f7",
+   "metadata": {},
+   "source": [
+    "# Example IRIS call for prediction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "a30edf5a-19c7-4239-ba59-6fd5b1081c85",
@@ -71,9 +79,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5f940d51-4fe8-48c2-bb3a-d99035df2312",
+   "metadata": {},
+   "source": [
+    "#### Calling the prediction in the cmd\n",
+    "\n",
+    "curl -X POST \"http://127.0.0.1:8000/predict\" -H \"accept: application/json\" -H \"Content-Type: application/json\" -d \"{\\\"sepal_length\\\":5.7,\\\"sepal_width\\\":3.1,\\\"petal_length\\\":4.9,\\\"petal_width\\\":2.2}\"\n",
+    "\n",
+    "\n",
+    "#### returns:\n",
+    "{\"prediction\":\"Virginica\",\"probability\":0.93}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b243b0c8-8b30-45c2-bc80-1e7329c5fb9f",
+   "id": "74ff43f5-c74d-420d-96b1-cffb8fc8da0d",
    "metadata": {},
    "outputs": [],
    "source": []
