Added the PKM prediction instead of Iris. Removed all Iris related things. Removed the MLServer - failed experiment. The images arent represented serverside - but should be able to be pulled for the Streamlit app

--- a/backend/FastAPI/FastAPI.ipynb
+++ b/backend/FastAPI/FastAPI.ipynb
@@ -2,24 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "e18c80c4-ed6f-4e2c-b756-91aefc1fb62b",
+   "execution_count": null,
+   "id": "06056bf3-c6e5-4899-b2f1-d0e439736446",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e18c80c4-ed6f-4e2c-b756-91aefc1fb62b",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\anaconda\\envs\\Bachelorarbeit\\lib\\site-packages\\sklearn\\base.py:376: InconsistentVersionWarning: Trying to unpickle estimator DecisionTreeClassifier from version 1.4.2 when using version 1.4.1.post1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n",
+      "D:\\anaconda\\envs\\Bachelorarbeit\\lib\\site-packages\\sklearn\\base.py:376: InconsistentVersionWarning: Trying to unpickle estimator RandomForestClassifier from version 1.4.2 when using version 1.4.1.post1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Library imports\n",
     "import uvicorn\n",
     "from fastapi import FastAPI\n",
-    "from model import IrisModel, IrisSpecies\n",
+    "#from model import IrisModel, IrisSpecies\n",
+    "from generate_images import *\n",
     "\n",
     "# 2. Create app and model objects\n",
     "app = FastAPI()\n",
-    "model = IrisModel()\n",
+    "#model = IrisModel()\n",
+    "model = create_model(Configuration)\n",
     "\n",
     "# 3. Expose the prediction functionality, make a prediction from the passed\n",
     "#    JSON data and return the predicted flower species with the confidence\n",
+    "\"\"\"\n",
     "@app.post('/predict')\n",
     "def predict_species(iris: IrisSpecies):\n",
     "    data = iris.dict()\n",
@@ -30,6 +56,27 @@
     "        'prediction': prediction,\n",
     "        'probability': probability\n",
     "    }\n",
+    "\"\"\"\n",
+    "@app.post('/generate_images')\n",
+    "def generate_images():\n",
+    "    config = Configuration()\n",
+    "    accelerator = Accelerator(\n",
+    "        mixed_precision=config.mixed_precision,\n",
+    "        gradient_accumulation_steps=config.gradient_accumulation_steps,\n",
+    "        log_with=\"tensorboard\",\n",
+    "        project_dir=os.path.join(config.output_dir, \"logs\"),\n",
+    "    )\n",
+    "\n",
+    "    image_generation_pipeline = initialize_pipeline(accelerator, config)\n",
+    "\n",
+    "    images = image_generation_pipeline(\n",
+    "        batch_size=config.eval_batch_size,\n",
+    "        generator=torch.manual_seed(config.seed),\n",
+    "        num_inference_steps=config.number_of_noise_steps,\n",
+    "    ).images  # type: ignore (There are multiple definitions which break the type hints)\n",
+    "\n",
+    "    if isinstance(images, list):\n",
+    "        save_images(images)\n",
     "\n",
     "\n",
     "#suggestion: just use the app.py instead. Notebook + FastAPI is funky.\n",
@@ -39,7 +86,7 @@
     "#    Will run on http://127.0.0.1:8000\n",
     "if __name__ == '__main__':\n",
     "    pass\n",
-    "    uvicorn.run(app, host='127.0.0.1', port=8000)"
+    "    #uvicorn.run(app, host='127.0.0.1', port=8000)"
    ]
   },
   {
@@ -52,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "a30edf5a-19c7-4239-ba59-6fd5b1081c85",
    "metadata": {},
    "outputs": [
@@ -60,7 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'{\"prediction\":\"Virginica\",\"probability\":0.93}'\n"
+      "b'null'\n"
      ]
     }
    ],
@@ -74,7 +121,10 @@
     "    'petal_width': 2.2\n",
     "}\n",
     "\n",
-    "response = requests.post('http://127.0.0.1:8000/predict', json=new_measurement)\n",
+    "#response = requests.post('http://127.0.0.1:8000/predict', json=new_measurement)\n",
+    "#print(response.content)\n",
+    "\n",
+    "response = requests.post('http://127.0.0.1:8000/generate_images')\n",
     "print(response.content)\n"
    ]
   },
@@ -89,7 +139,11 @@
     "\n",
     "\n",
     "#### returns:\n",
-    "{\"prediction\":\"Virginica\",\"probability\":0.93}"
+    "{\"prediction\":\"Virginica\",\"probability\":0.93}\n",
+    "\n",
+    "curl -X POST \"http://127.0.0.1:8000/generate_images\"\n",
+    "\n",
+    "returns: images in the folder predictions / null after the command. "
    ]
   },
   {
@@ -117,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
